Fixing spacing and label typos.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@328 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -36,9 +36,9 @@ y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2.
 
 \section{Minimal mediator width in \schannel exchange}
 
-Tables\,\ref{tab:widhtV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed in Section\,\ref{sec:monojet_V} for vector and axial-vector \schannel models, respectively. The numbers range from $\approx0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\approx0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
+Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed in Section\,\ref{sec:monojet_V} for vector and axial-vector \schannel models, respectively. The numbers range from $\approx0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\approx0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
 
-For the parameter grid for scalar and pseudo-scalar mediator exchange in \schannel proposed in Section\,\ref{sec:monojet_S}, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widhtS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\approx0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
+For the parameter grid for scalar and pseudo-scalar mediator exchange in \schannel proposed in Section\,\ref{sec:monojet_scalar}, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\approx0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
 
 
 \begin{table}
@@ -57,10 +57,10 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 1000 & 0.022  &        &        &        &        &        &        & 0.030  & 0.030  & 0.057  \\
 \hline
 \end{tabular}
-\caption{Minimal width of the vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
-\label{tab:widhtV}
+\caption[][5cm]{Minimal width of the vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\label{tab:widthV}
 \end{table}
-
+\vspace{4cm}
 
 \begin{table}
 \centering
@@ -78,9 +78,12 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 1000 & 0.020  &        &        &        &        &        &        & 0.029  & 0.030  & 0.055  \\
 \hline
 \end{tabular}
-\caption{Minimal width of the axial-vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
-\label{tab:widhtA}
+\caption[][5cm]{Minimal width of the axial-vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\label{tab:widthA}
 \end{table}
+\vspace{4cm}
+
+\newpage
 
 
 \begin{table}
@@ -99,9 +102,10 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
 \hline
 \end{tabular}
-\caption{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
-\label{tab:widhtS}
+\caption[][5cm]{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\label{tab:widthS}
 \end{table}
+\vspace{4cm}
 
 
 \begin{table}
@@ -120,6 +124,7 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
 \hline
 \end{tabular}
-\caption{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
-\label{tab:widhtP}
+\caption[][5cm]{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\label{tab:widthP}
 \end{table}
+\vspace{4cm}
