--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -36,13 +36,14 @@ y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2.
 
 \section{Minimal mediator width in \schannel exchange}
 
-Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed in Section\,\ref{sec:monojet_V} for vector and axial-vector \schannel models, respectively. The numbers range from $\approx0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\approx0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
+Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed in Section\,\ref{sec:monojet_V} for vector and axial-vector \schannel models, respectively. The numbers range from $\sim0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\sim0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
 
-For the parameter grid for scalar and pseudo-scalar mediator exchange in \schannel proposed in Section\,\ref{sec:monojet_scalar}, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\approx0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
+For the parameter grid for scalar and pseudo-scalar mediator exchange in \schannel proposed in Section\,\ref{sec:monojet_scalar}, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\sim0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
 
 
 \begin{table}
 \centering
+\resizebox{\textwidth}{!}{
 \begin{tabular}{| l |r r r r r r r r r r|}
 \hline
 \multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{10}{c|}{\mmed/\gev} \\
@@ -56,14 +57,16 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
  500 & 0.022  &        &        &        &        &        & 0.029  & 0.030  & 0.060  & 0.057  \\
 1000 & 0.022  &        &        &        &        &        &        & 0.030  & 0.030  & 0.057  \\
 \hline
-\end{tabular}
-\caption[][5cm]{Minimal width of the vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\end{tabular}}
+\caption%[][5cm]
+{Minimal width of the vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 \label{tab:widthV}
 \end{table}
 \vspace{4cm}
 
 \begin{table}
 \centering
+\resizebox{\textwidth}{!}{
 \begin{tabular}{| l |r r r r r r r r r r|}
 \hline
 \multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{10}{c|}{\mmed/\gev} \\
@@ -77,8 +80,9 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
  500 & 0.020  &        &        &        &        &        & 0.027  & 0.029  & 0.050  & 0.056  \\
 1000 & 0.020  &        &        &        &        &        &        & 0.029  & 0.030  & 0.055  \\
 \hline
-\end{tabular}
-\caption[][5cm]{Minimal width of the axial-vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\end{tabular}}
+\caption%[][5cm]
+{Minimal width of the axial-vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 \label{tab:widthA}
 \end{table}
 \vspace{4cm}
@@ -88,6 +92,7 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 
 \begin{table}
 \centering
+\resizebox{\textwidth}{!}{
 \begin{tabular}{| l |r r r r r r r r r|}
 \hline
 \multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{9}{c|}{\mmed/\gev} \\
@@ -101,8 +106,9 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
  500 &$<$0.001&        &        &        &        &        & 0.001  & 0.003  & 0.043  \\
 1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
 \hline
-\end{tabular}
-\caption[][5cm]{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\end{tabular}}
+\caption%[][5cm]
+{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 \label{tab:widthS}
 \end{table}
 \vspace{4cm}
@@ -110,6 +116,7 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
 
 \begin{table}
 \centering
+\resizebox{\textwidth}{!}{
 \begin{tabular}{| l |r r r r r r r r r|}
 \hline
 \multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{9}{c|}{\mmed/\gev} \\
@@ -123,8 +130,9 @@ For the parameter grid for scalar and pseudo-scalar mediator exchange in \schann
  500 &$<$0.001&        &        &        &        &        & 0.003  & 0.003  & 0.043  \\
 1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
 \hline
-\end{tabular}
-\caption[][5cm]{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+\end{tabular}}
+\caption%[][5cm]
+{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
 \label{tab:widthP}
 \end{table}
 \vspace{4cm}
