Comment out references to cross section tables. (and fix ref to summary table)
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@331 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -31,7 +31,8 @@ is known to NLO accuracy in the case of DM pair production in association to one
 All other models are currently known to leading order. Appendix~\ref{app:MonojetLikeModels_Appendix}
 details the recommended implementation of these models that
 have been used for the studies in this Chapter. A summary of the recommendation of the generation of this model
-is provided in Table~\ref{tab:summaryModels}.
+is provided in Table~%\ref{tab:summaryModels} % hardwire, because we don't use real caption on that table.
+6.1.
 
 %%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%
@@ -983,7 +984,7 @@ While the simple scaling function
 \end{equation}
 is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example), 
 this scaling is only approximate (up to 20\%)  and relies on the narrow width approximation, ignoring PDFs effects. 
-We also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{app:TTBar_Xsecs}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to be close to but lower than the perturbative limit. 
+%We also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{app:TTBar_Xsecs}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to be close to but lower than the perturbative limit. 
 
 \begin{figure}[!ht]
 	\begin{center}
